persistence entity unit tests