@@ -1,5 +1,7 @@
 package edu.kit.tm.cm.iot.sensingdevice.infrastructure.persistence.mappers;
 
+import java.util.stream.Collectors;
+
 import edu.kit.tm.cm.iot.sensingdevice.infrastructure.persistence.entities.SensingDevicePersistenceEntity;
 import edu.kit.tm.cm.iot.sensingdevice.logic.model.SensingDevice;
 
@@ -11,15 +13,15 @@ public class SensingDeviceMapper {
         persistenceEntity.setManufacturer(sensingDevice.getManufacturer());
         persistenceEntity.setModel(sensingDevice.getModel());
         persistenceEntity.setSerialNumber(sensingDevice.getSerialNumber());
-        persistenceEntity
-                .setSensors(sensingDevice.getSensors().stream().map(SensorMapper::toPersistenceEntity).toList());
+        persistenceEntity.setSensors(sensingDevice.getSensors().stream().map(SensorMapper::toPersistenceEntity)
+                .collect(Collectors.toList()));
         return persistenceEntity;
     }
 
     public static SensingDevice fromPersistenceEntity(SensingDevicePersistenceEntity persistenceEntity) {
         var sensingDevice = new SensingDevice(persistenceEntity.getUuid(), persistenceEntity.getSerialNumber(),
-                persistenceEntity.getManufacturer(), persistenceEntity.getManufacturer(),
-                persistenceEntity.getSensors().stream().map(SensorMapper::fromPersistenceEntity).toList());
+                persistenceEntity.getManufacturer(), persistenceEntity.getManufacturer(), persistenceEntity.getSensors()
+                        .stream().map(SensorMapper::fromPersistenceEntity).collect(Collectors.toList()));
         return sensingDevice;
     }
 
