@@ -1,5 +1,7 @@
 package edu.kit.tm.cm.iot.sensingdevice.infrastructure.persistence.mappers;
 
+import java.util.stream.Collectors;
+
 import edu.kit.tm.cm.iot.sensingdevice.infrastructure.persistence.entities.SensorPersistenceEntity;
 import edu.kit.tm.cm.iot.sensingdevice.logic.model.Sensor;
 
@@ -11,13 +13,14 @@ public class SensorMapper {
         persistenceEntity.setName(sensor.getName());
         persistenceEntity.setUuid(sensor.getId());
         persistenceEntity.setMetadata(sensor.getMetadata());
-        persistenceEntity
-                .setDatastreams(sensor.getDatastreams().stream().map(DatastreamMapper::toPersistenceEntity).toList());
+        persistenceEntity.setDatastreams(sensor.getDatastreams().stream().map(DatastreamMapper::toPersistenceEntity)
+                .collect(Collectors.toList()));
         return persistenceEntity;
     }
 
     public static Sensor fromPersistenceEntity(SensorPersistenceEntity persistenceEntity) {
-        var ds = persistenceEntity.getDatastreams().stream().map(DatastreamMapper::fromPersistenceEntity).toList();
+        var ds = persistenceEntity.getDatastreams().stream().map(DatastreamMapper::fromPersistenceEntity)
+                .collect(Collectors.toList());
         var sensor = new Sensor(persistenceEntity.getUuid(), persistenceEntity.getName(),
                 persistenceEntity.getDescription(), persistenceEntity.getDescription(), ds);
         return sensor;
